# ethers-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
abi/: Cargo.toml  README.md
cargo/: Cargo.toml
cargo/src/: main.rs
client/: Cargo.toml
core/: Cargo.toml
core/src/: utils.rs
core/src/utils/: eth.rs  hex.rs
core/src/utils/eth/: hash.rs
eip2718/: Cargo.toml
eip2718/src/: eip1559.rs  eip2930.rs  legacy.rs  lib.rs
eip712/: Cargo.toml
eip712/src/: lib.rs
ethers/: Cargo.toml  build.rs
ethers/hardhat/: package-lock.json
ethers/sol/: hardhat.config.ts  package-lock.json
ethers/sol/contracts/: Lock.sol
ethers/src/: client.rs  contract.rs  error.rs  events.rs  lib.rs
ethers/tests/: test_contract.rs  wallet.json
example/: Cargo.toml  build.rs
example/sol/: package-lock.json
example/sol/contracts/: Example.sol  Lock.sol
example/src/: lib.rs  main.rs
hardhat/: Cargo.toml
hardhat/examples/: hardhat.rs
hardhat/src/: cmds.rs  error.rs  ethabi.rs  lib.rs  utils.rs
hash/: Cargo.toml
hash/src/: lib.rs
macros/: Cargo.toml
macros/src/: contract.rs  error.rs  gen.rs  lib.rs  mapping.json
macros/src/contract/: constructor.rs  event.rs  function.rs  utils.rs
parity/ethabi/: Cargo.toml
parity/ethabi/src/: errors.rs  event.rs  filter.rs  lib.rs
parity/ethabi/src/token/: lenient.rs
parity/ethereum-types/: Cargo.toml
parity/ethereum-types/src/: uint.rs
parity/ethereum-types/tests/: serde.rs
parity/fixed-hash/: Cargo.toml
parity/fixed-hash/benches/: cmp.rs
parity/fixed-hash/src/: hash.rs
parity/primitive-types/: Cargo.toml
parity/primitive-types/impls/codec/: Cargo.toml
parity/primitive-types/impls/num-traits/: Cargo.toml
parity/primitive-types/impls/rlp/: Cargo.toml
parity/primitive-types/impls/serde/: Cargo.toml
parity/primitive-types/impls/serde/benches/: impl_serde.rs
parity/primitive-types/tests/: fp_conversion.rs  num_traits.rs  scale_info.rs
parity/uint/: Cargo.toml
parity/uint/examples/: modular.rs
parity/uint/tests/: uint_tests.rs
primitives/: Cargo.toml  README.md
primitives/src/: address.rs  bytes.rs  fixed.rs  hex.rs  int.rs  lib.rs  sig.rs  unit.rs
primitives/src/int/: signed.rs  uint.rs  unsigned.rs
providers/: Cargo.toml
providers/src/: error.rs  event.rs  impls.rs  lib.rs  provider.rs  rpc.rs  types.rs
providers/src/impls/: channel.rs  http.rs  ws.rs
providers/src/provider/: event.rs  rpc.rs
providers/src/providers/: channel.rs  http.rs  ws.rs
providers/src/test-data/block/: block.json  hardhat.json
providers/src/types/: accesslist.rs  block.rs  block_num_tag.rs  fee.rs  filter.rs  syncing.rs
serde/eip712/: Cargo.toml
serde/eip712/src/: definition.rs  enctype.rs  hashstruct.rs  lib.rs
serde/ethabi/: Cargo.toml
serde/ethabi/src/: de.rs  lib.rs  ser.rs
serde/rlp/: Cargo.toml
serde/rlp/src/: lib.rs
signer/: Cargo.toml
signer/src/: error.rs  lib.rs  signer.rs  types.rs  wallet.rs
signer/src/types/: eip1559.rs  eip2930.rs  legacy.rs
signers/: Cargo.toml
signers/src/: signer.rs  wallet.rs
src/: lib.rs  runtime.rs
txrequest/: Cargo.toml
txrequest/src/: accesslist.rs  eip1559.rs  eip2930.rs  legacy.rs  lib.rs
types/: Cargo.toml
types/src/: address.rs  block.rs  bytes.rs  eip712.rs  lib.rs  request.rs  signature.rs  unit.rs
types/src/request/: eip1559.rs  eip2930.rs  legacy.rs
utils/: Cargo.toml
utils/src/: eip712.rs  error.rs  eth.rs  hash.rs  hex.rs  lib.rs  rlp.rs  types.rs
utils/src/hex/: hex_fixed.rs  hex_var_len.rs
utils/src/test-data/: test.json
utils/src/test-data/block/: empty_txs.json  pending.json
utils/src/types/: accesslist.rs  block.rs  block_num_tag.rs  fee.rs  filter.rs  syncing.rs
wallet/: Cargo.toml
wallet/examples/: bip39_randcheck.rs
wallet/src/: error.rs  hash.rs  keystore.rs  lib.rs  vtable.rs  wallet.rs
wallet/src/hd_wallet/: bip32.rs  bip39.rs  bip44.rs  mod.rs
wallet/src/test-keys/: ethersjs.json  scrypt.json
wallet/src/wallet/: pure.rs  rust_crypto.rs
