[workspace]
members = [
    "serde/ethabi",
    "serde/eip712",
    "serde/rlp",
    "primitives",
    "eip712",
    "providers",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["futures-rs", "ethereum", "timeout", "jsonrpc"]
description = "Ethereum wallet implementation and utility tools"
documentation = "https://docs.rs/ethers-rs"
readme = "README.md"
homepage = "https://github.com/AgoraCyber/ethers-rs"
repository = "https://github.com/AgoraCyber/ethers-rs"


[workspace.dependencies]
# serde support
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }


# error
thiserror = "^1"
anyhow = "^1"


#hex support
hex = "^0.4"

# num traits
num = "^0.4.0"

fixed = "^1.23.0"

dotenv = "^0.15"
pretty_env_logger = "^0.4"
log = "^0.4"


impl-trait-for-tuples = "0.2.2"


bytes = "^1.4.0"


sha3 = "0.10.6"

# crypto
k256 = { version = "^0.12.0" }
rand = { version = "^0.8.5", features = ["getrandom"] }


ethbind = { version = "^0.1" }

regex = "^1"

once_cell = "1.17.1"

concat-idents = "1.1.4"


ethbloom = { version = "0.13", default-features = false }

# internal crates
serde_ethabi = { path = "./serde/ethabi", version = "^0.2" }
serde_eip712 = { path = "./serde/eip712", version = "^0.2" }
serde_rlp = { path = "./serde/rlp", version = "^0.2" }
ethers-primitives = { path = "./primitives", version = "^0.2" }
ethers-provider = { path = "./providers", version = "^0.2" }
ethers-eip712 = { path = "./eip712", version = "^0.2" }
