[package]
name = "ethers-rs"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "An ethereum contract binding code generation framework"
documentation = "https://docs.rs/ethers-rs"

[dependencies]

# internals
serde_ethabi = { workspace = true }
serde_eip712 = { workspace = true }
serde_ethrlp = { workspace = true }
ethers_primitives = { workspace = true }
ethers_provider = { workspace = true }
ethers_eip712 = { workspace = true }
ethers_eip2718 = { workspace = true }
ethers_wallet = { workspace = true }
ethers_signer = { workspace = true }
ethers_macros = { workspace = true }
ethers_hardhat = { workspace = true }
ethbind = { workspace = true }

#others
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[workspace]
members = [
    "serde/ethabi",
    "serde/eip712",
    "serde/rlp",
    "primitives",
    "eip712",
    "providers",
    "eip2718",
    "wallet",
    "signers",
    "hardhat",
    "macros",
    # "example",
    "./",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
license-file = "LICENSE"
keywords = ["futures-rs", "ethereum", "timeout", "jsonrpc"]
description = "Ethereum wallet implementation and utility tools"
documentation = "https://docs.rs/ethers-rs"
readme = "README.md"
homepage = "https://github.com/AgoraCyber/ethers-rs"
repository = "https://github.com/AgoraCyber/ethers-rs"


[workspace.dependencies]
# serde support
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }


# error
thiserror = "^1"
anyhow = "^1"


#hex support
hex = "^0.4"

# num traits
num = "^0.4.0"

fixed = "^1.23.0"

dotenv = "^0.15"
pretty_env_logger = "^0.4"
log = "^0.4"


impl-trait-for-tuples = "0.2.2"


bytes = "^1.4.0"


sha3 = "0.10.6"

# crypto
k256 = { version = "^0.12.0" }
elliptic-curve = "^0.12"
rand = { version = "^0.8.5", features = ["getrandom"] }


ethbind = { version = "^0.1" }

regex = "^1"

once_cell = "1.17.1"

concat-idents = "1.1.4"


ethbloom = { version = "0.13", default-features = false }

# internal crates
serde_ethabi = { path = "./serde/ethabi", version = "^0.2" }
serde_eip712 = { path = "./serde/eip712", version = "^0.2" }
serde_ethrlp = { path = "./serde/rlp", version = "^0.2" }
ethers_primitives = { path = "./primitives", version = "^0.2" }
ethers_provider = { path = "./providers", version = "^0.2" }
ethers_eip712 = { path = "./eip712", version = "^0.2" }
ethers_eip2718 = { path = "./eip2718", version = "^0.2" }
ethers_wallet = { path = "./wallet", version = "^0.2" }
ethers_signer = { path = "./signers", version = "^0.2" }
ethers_macros = { path = "./macros", version = "^0.2" }
ethers_hardhat = { path = "./hardhat", version = "^0.2" }
ethers-rs = { path = "./", version = "^0.2" }

jsonrpc-rs = "^0.1"
async-timer-rs = "^0.1"
completeq-rs = "^0.1"

# async 
futures = { version = "^0.3", features = ["thread-pool"] }
async-std = { version = "1.11.0", features = ["attributes", "default"] }
tokio-tungstenite = "0.18.0"
reqwest = { version = "0.11.13", features = ["native-tls", "socks"] }
tokio = { version = "1", features = ["full"] }
# bench
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }


uuid = { version = "1.2.2", features = ["serde", "v4"] }

sha2 = { version = "0.10.6" }
hmac = { version = "0.12.1" }
scrypt = { version = "0.10.0", default-features = false }
aes = { version = "0.8.2" }
ctr = { version = "0.9.2" }
digest = { version = "0.10.6" }
pbkdf2 = { version = "^0.11" }
async-process = "^1.6.0"
