[package]
name = "cargo-ethers"
version = "0.1.0"
edition = "2021"
description = "ethers-rs subcommand for cargo"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap-cargo = "^0.10.0"
clap = { version = "^4.1.1", features = ["std", "derive"] }