[package]
name = "ethers-eip2718"
license = "MIT"
edition.workspace = true
version.workspace = true
description = "EIP2718 implementation for ethers-rs"
documentation = "https://docs.rs/ethers-eip2718"

[dependencies]
# serde
serde = { workspace = true }
serde_json = { workspace = true }

# internals
ethers-primitives = { workspace = true }
serde_rlp = { workspace = true }

sha3 = { workspace = true }


# errors
anyhow = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
log = { workspace = true }
