[package]
name = "ethers-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-macros-rs = {path = "../macros"}
ethers-providers-rs = {path = "../providers"}
ethabi = {path = "../parity/ethabi"}
thiserror = "1.0.38"
rustc-hex = { version = "2.0.1" }

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.4", features = ["async_futures", "html_reports"]}