[package]
name = "ethers-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.68"
serde_json = "^1.0"
thiserror = "1.0.38"
log = "0.4.16"

ethers-macros-rs = {path = "../macros"}
ethers-providers-rs = {path = "../providers"}
ethers-types-rs = {path = "../types"}
ethers-signer-rs = {path = "../signer"}
ethers-wallet-rs = {path = "../wallet"}

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.4", features = ["async_futures", "html_reports"]}
