[package]
name = "ethers-rs"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow = "1.0.68"
serde_json = "^1.0"
thiserror = "1.0.38"
log = "0.4.16"

serde = { version = "^1.0", features = ["derive"] }

once_cell = "1.17.0"

ethers-macros-rs = { workspace = true }
ethers-providers-rs = { workspace = true }
ethers-types-rs = { workspace = true }
ethers-signer-rs = { workspace = true }
ethers-wallet-rs = { workspace = true }
ethers-hardhat-rs = { workspace = true }

completeq-rs = "^0.1"
async-timer-rs = "^0.1"


[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = { version = "1.11.0", features = ["attributes", "default"] }
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }

[build-dependencies]
ethers-hardhat-rs = { workspace = true }
