[package]
name = "example"
version = "0.1.0"
edition = "2021"
publish = ["rsproxy"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-rs = { workspace = true }
serde = { workspace = true }
async-std = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }

[build-dependencies]
ethers-rs = { workspace = true }
