[package]
name = "ethers-hardhat-rs"
version = "0.1.0"
edition = "2021"
description = "ethers-rs plugin for communication with hardhat project." 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "^1.6.0"

log = "0.4.16"
anyhow = "1.0.68"
thiserror = "1.0.38"
once_cell = "1.17.0"
colorable = "0.1.4"
async-trait = "0.1.63"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

futures = {version = "0.3.25",features = ["thread-pool"]}
pretty_env_logger = "0.4.0"


ethabi = {path = "../parity/ethabi"}

ethers-wallet-rs = { path = "../wallet"}
ethers-providers-rs = {path = "../providers"}
ethers-signer-rs = {path = "../signer"}

[dev-dependencies]
dotenv = "0.15.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.4", features = ["async_futures", "html_reports"]}
