[package]
name = "ethers-hardhat-rs"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = { workspace = true }

log = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
colorable = "0.1.4"
async-trait = "0.1.63"
serde = { workspace = true }
serde_json = { workspace = true }

futures = { workspace = true }
pretty_env_logger = { workspace = true }


ethers_wallet = { workspace = true }
ethers_providers = { workspace = true }
ethers_signers = { workspace = true }
ethers_primitives = { workspace = true }

[dev-dependencies]
dotenv = "0.15.0"
async-std = { version = "1.11.0", features = ["attributes", "default"] }
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }
