[package]
name = "ethers-macros-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ethers-hardhat-rs = { path = "../hardhat"}
heck = "0.4"
syn = { version = "^1", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"
