[package]
name = "ethers-macros-rs"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
ethers-hardhat-rs = { workspace = true }
heck = "0.4"
syn = { version = "^1", features = ["full"] }
quote = "^1"
proc-macro2 = "^1"
