[package]
name = "ethers_provider"
license = "MIT"
edition.workspace = true
version.workspace = true
description = "Primitive types for ethereum, including Rlp/ABI encode/decode support "
documentation = "https://docs.rs/ethers-provider-rs"

[dependencies]
# error
thiserror = { workspace = true }
anyhow = { workspace = true }

# serde
serde = { workspace = true }
serde_json = { workspace = true }


# internals
ethers_primitives = { workspace = true }
ethers_eip2718 = { workspace = true }

# agora
jsonrpc-rs = { workspace = true }
async-timer-rs = { workspace = true }
completeq-rs = { workspace = true }

# others
once_cell = { workspace = true }
log = { workspace = true }


# async
futures = { workspace = true }
tokio-tungstenite = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
async-std = { workspace = true }
criterion = { workspace = true }
