[package]
name = "ethers-signer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-rs = "^0.1"
thiserror = "1.0.38"
anyhow = "1.0.68"
log = "0.4.16"
futures = {version = "0.3.25",features = ["thread-pool"]}
once_cell = "1.17.0"
serde_json = "^1.0"
ethers-utils-rs = {path = "../utils"}