[package]
name = "ethers-signer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-rs = "^0.1"
thiserror = "1.0.38"
anyhow = "1.0.68"
log = "0.4.16"
futures = {version = "0.3.25",features = ["thread-pool"]}
once_cell = "1.17.0"

ethers-utils-rs = {path = "../utils"}
ethers-wallet-rs = {path = "../wallet"}
ethabi = {path = "../parity/ethabi"}

serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = "2.2.0"
rlp = { version = "0.5.2", default-features = false, features = ["std"] }


[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.4", features = ["async_futures", "html_reports"]}