[package]
name = "ethers-signer-rs"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-rs = "^0.1"
thiserror = "1.0.38"
anyhow = "1.0.68"
log = "0.4.16"
futures = { version = "0.3.25", features = ["thread-pool"] }
once_cell = "1.17.0"

ethers-types-rs = { path = "../types" }
ethers-wallet-rs = { path = "../wallet" }

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = { version = "1.11.0", features = ["attributes", "default"] }
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }

serde_json = "^1.0"
