[package]
name = "ethers_signers"
license-file.workspace = true
edition.workspace = true
version.workspace = true
description = "Ethereum local wallet implemenation"
documentation = "https://docs.rs/ethers-wallet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-rs = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

ethers_primitives = { workspace = true }
ethers_wallet = { workspace = true }
ethers_eip2718 = { workspace = true }
ethers_eip712 = { workspace = true }

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = { version = "1.11.0", features = ["attributes", "default"] }
criterion = { version = "0.4", features = ["async_futures", "html_reports"] }

serde_json = "^1.0"
