[package]
name = "types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-rs = "^0.1"
thiserror = "1.0.38"
anyhow = "1.0.68"
log = "0.4.16"
once_cell = "1.17.0"

ethabi = {path = "../parity/ethabi"}

serde_json = "^1.0"
serde_with = "2.2.0"
serde = { version = "^1.0", features = ["derive"] }

rlp = { version = "0.5.2", default-features = false, features = ["std"] }

ethers-utils-rs = {path = "../utils"}

k256 = {version = "^0.12.0", optional = true}

hex = "0.4.3"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
ethers-wallet-rs = {path = "../wallet"}


[features]
default = ["rust_crypto"]
rust_crypto = ["k256"]