[package]
name = "ethers-utils-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.16"
thiserror = "1.0.38"
ethabi = { path = "../parity/ethabi"}