[package]
name = "ethers-utils-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
hex = "0.4.3"
anyhow = "1.0.68"
serde = { version = "^1.0", features = ["derive"] }
log = "0.4.16"
thiserror = "1.0.38"
ethabi = { path = "../parity/ethabi"}
serde_json = "^1.0"
serde_with = "2.2.0"
sha3 = "0.10.6"
unicode-xid = "0.2.4"
digest = {version = "0.10.6", optional = true}
hmac = {version = "0.12.1", optional = true}
pbkdf2 = {version = "^0.11",optional = true}
k256 = {version = "^0.12.0", optional = true}

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}
criterion = {version = "0.4", features = ["async_futures", "html_reports"]}
jsonrpc-rs = "^0.1"

[features]
default = ["rust_crypto"]

rust_crypto = [
    "digest","hmac","pbkdf2","k256"
]