[package]
name = "ethers-wallet-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
thiserror = "1.0.38"
regex = "1.7.1"
once_cell = "1.17.0"
ethers-utils-rs = {path = "../utils"}
serde_json = "^1.0"
num = "^0.4"
rand = {version = "^0.8.5", features = ["getrandom"]}

sha2 = {version = "0.10.6",optional = true}
hmac = {version = "0.12.1", optional = true}
k256 = {version = "^0.12.0", optional = true}
serde = {version = "1.0.147", features = ["derive"] }


[features]
default = ["pure"]
pure = ["k256","sha2","ethers-utils-rs/rust_crypto","hmac"]
openssl = []

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"