[package]
name = "serde_rlp"
license = "MIT"
edition.workspace = true
version.workspace = true
description = "Primitive types for ethereum, including Rlp/ABI encode/decode support "
documentation = "https://docs.rs/serde_ethabi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde
serde = { workspace = true }

# error
thiserror = { workspace = true }
anyhow = { workspace = true }

# other crates
regex = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }

[dev-dependencies]
pretty_env_logger = { workspace = true }
