[package]
name = "ethers-impl-rlp"
version = "0.3.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/paritytech/parity-common"
description = "RLP serialization support for uint and fixed hash."
edition = "2021"
rust-version = "1.56.1"

[dependencies]
rlp = { version = "0.5.2", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = ["rlp/std"]
